--- a/src/CategoryList/CategoryList.css
+++ b/src/CategoryList/CategoryList.css
@@ -1,10 +1,22 @@
-.categories {
-    margin-top: 100px;
-    width: 175px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
+@media only screen and (max-width: 749px) {
+    .categories {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 750px) {
+    .categories {
+        margin-top: 100px;
+        width: 175px;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        overflow-x: hidden;
+        padding-top: 20px;
+        background-color: white;
+        padding-left: 30px;
+        font-size: 18px;
+        padding-bottom: 20px;
+    }
 }
