--- a/src/MainPage/MainPage.css
+++ b/src/MainPage/MainPage.css
@@ -1,33 +1,61 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
     font-family: "Open Sans", sans-serif;
     font-size: 20px;
     color: #444;
-    text-align: center;
-    line-height: 1.5;
-    min-width: 320px;
 }
 
-section {
-    padding: 30px 15px;
+@media only screen and (min-width: 200px) {
+    .site_title {
+        margin-top: 100px;
+        margin-bottom: 60px;
+    }
+
+    .random_prompt {
+        font-size: 18px;
+        padding-bottom: 30px;
+        text-align: center;
+    }
+
+    .site_description {
+        padding-top: 60px;
+        border-top: 1px solid #aaa;
+    }
+
+    .site_title, .site_description {
+        margin-right: 30px;
+        margin-left: 30px;
+        text-align: center;
+    }
+
+    .main_page_buttons {
+        margin-top: 20px;
+        border: 0px;
+        padding: 0px;
+        height: 25px;
+        width: 100px;
+        border-radius: 1px;
+        font-size: 12px;
+        background-color: #ccc;
+    }
+
+    .view_button {
+        margin-right: 20px;
+    }
+
+    .para_two {
+        margin-top: 20px;
+        margin-bottom: 60px;
+    }
+
+    .para_two, .para_one {
+        font-size: 15px;
+    }
 }
 
-.site_title {
-    height: 200px;
-    margin-top: 100px;
-}
-
-h1 {
-    font-size: 35px;
-}
-
-.random_prompt {
-    height: 200px;
-}
-
-ul {
-    list-style: none;
-}
+@media only screen and (min-width: 750px) {}
