--- a/src/AddPromptForm/AddPromptForm.css
+++ b/src/AddPromptForm/AddPromptForm.css
@@ -30,7 +30,7 @@ body {
 
     .input_field {
         border: 1px solid #aaa;
-        max-width: 300px;
+        width: 300px;
     }
 
     .author_field {
@@ -63,4 +63,12 @@ body {
     }
 }
 
-@media only screen and (min-width: 750px) {}
+@media only screen and (min-width: 750px) {
+    .input_field {
+        width: 500px;
+    }
+
+    .option_field {
+        width: 300px;
+    }
+}
