refactor for MVP

--- a/src/PromptList/PromptList.css
+++ b/src/PromptList/PromptList.css
@@ -79,7 +79,8 @@ body {
     }
 
     .prompt_list {
-        margin-left: 200px;
+        /* margin-left: 200px; */
+        margin-left: 50px;
         margin-right: 50px;
     }
 
