--- a/src/Prompt/Prompt.css
+++ b/src/Prompt/Prompt.css
@@ -78,7 +78,8 @@ body {
 
 @media only screen and (min-width: 750px) {
     .prompt_align, .add_comment {
-        margin-left: 200px;
+        /* margin-left: 200px; */
+        margin-left: 50px;
         margin-right: 50px;
     }
 
