--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -4,6 +4,9 @@
         font-size: 12px;
         background-color: #aaa;
         text-align: center;
+        font-family: stratos, sans-serif;
+        font-weight: 400;
+        font-style: normal;
     }
 }
 
