--- a/src/TopNav/TopNav.css
+++ b/src/TopNav/TopNav.css
@@ -8,6 +8,22 @@
 
     .nav_options {
         font-size: 13px;
+        padding-top: 18px;
+        font-family: stratos, sans-serif;
+        font-weight: 600;
+        font-style: normal;
+    }
+
+    .link_style:link {
+        text-decoration: none;
+    }
+
+    .link_style:visited {
+        color: black;
+    }
+
+    .link_style:hover {
+        color: grey;
     }
 
     .navigation {
@@ -17,13 +33,24 @@
         right: 0;
         z-index: 10;
         background-color: #aaa;
-        padding-top: 12px;
-        padding-bottom: 12px;
+    }
+
+    img {
+        width: 50px;
+    }
+
+    .active {
+        color: black;
     }
 }
 
 @media only screen and (min-width: 750px) {
     .nav_options {
         font-size: 15px;
+        padding-top: 30px;
+    }
+
+    img {
+        width: 75px;
     }
 }
