--- a/src/PromptList/PromptList.css
+++ b/src/PromptList/PromptList.css
@@ -12,8 +12,11 @@ body {
 
 @media only screen and (min-width: 200px) {
     .prompt_list_h1 {
-        font-size: 25px;
-        margin-bottom: 30px;
+        font-family: stratos, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+        font-size: 35px;
+        margin-bottom: 40px;
     }
 
     .prompt_list_h2 {
@@ -38,7 +41,7 @@ body {
         padding-left: 0;
         padding-right: 0;
         border-top: 1px solid #aaa;
-        padding-top: 30px;
+        padding-top: 50px;
         margin-right: 30px;
         margin-left: 30px
     }
@@ -57,19 +60,31 @@ body {
         border-radius: 1px;
         font-size: 12px;
         background-color: #ccc;
+        font-family: stratos, sans-serif;
+        font-weight: 500;
+        font-style: normal;
     }
+    
     .prompt_category {
         font-style: italic;
         font-size: 12px;
-        margin-top: 10px;
-        margin-bottom: 30px;
+        margin-top: 20px;
+        margin-bottom: 50px;
         color: #aaa;
+    }
+
+    .prompt_category, .prompt_author {
+        font-family: stratos, sans-serif;
+        font-weight: 300;
+        font-style: normal;
     }
 }
 
 @media only screen and (min-width: 750px) {
     .prompt_list_h1 {
-        font-size: 35px;
+        font-size: 50px;
+        padding-top: 70px;
+        padding-bottom: 70px;
     }
 
     .prompt_list_h2 {
@@ -89,6 +104,17 @@ body {
     .prompt_category {
         font-size: 15px;
         margin-top: 10px;
-        margin-bottom: 30px;
+        margin-bottom: 75px;
+    }
+
+    .prompt_list_item {
+        padding-top: 75px;
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    .prompt_list {
+        margin-left: 15%;
+        margin-right: 15%;
     }
 }
