--- a/src/AddComment/AddComment.css
+++ b/src/AddComment/AddComment.css
@@ -9,6 +9,9 @@
         font-size: 12px;
         background-color: #ccc;
         color: black;
+        font-family: stratos, sans-serif;
+        font-weight: 500;
+        font-style: normal;
     }
 
     .input_field {
@@ -20,22 +23,50 @@
         height: 25px;
     }
 
-    .text_label {
-        margin-top: 30px;
+    .input_label {
+        line-height: 0;
+        font-size: 15px;
+        font-family: stratos, sans-serif;
+        font-weight: 400;
+        font-style: normal;
     }
 
-    .input_label {
-        font-size: 15px;
-        line-height: 0;
+    .comment_header {
+        font-family: stratos, sans-serif;
+        font-weight: 600;
+        font-style: normal;
+        font-size: 30px;
+    }
+
+    .add_comment_form {
+        margin-top: 30px;
     }
 }
 
 @media only screen and (min-width: 750px) {
     .input_field {
         max-width: 400px;
+        font-size: 15px;
     }
 
     .author_field {
         width: 300px;
+    }
+
+    .submit_comment_button {
+        height: 30px;
+        width: 200px;
+        font-size: 15px;
+    }
+
+    .comment_header {
+        font-size: 40px;
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    .text_field {
+        max-width: 500px;
+        height: 200px;
     }
 }
