update fonts and spacing

--- a/src/Prompt/Prompt.css
+++ b/src/Prompt/Prompt.css
@@ -116,6 +116,10 @@ body {
         margin-bottom: 80px;
     }
 
+    .prompt_content {
+        font-size: 50px;
+    }
+
     .comment_author {
         padding-top: 15px;
     }
