--- a/src/AddComment/AddComment.css
+++ b/src/AddComment/AddComment.css
@@ -16,7 +16,7 @@
 
     .input_field {
         border: 1px solid #aaa;
-        max-width: 300px;
+        width: 300px;
     }
 
     .author_field {
@@ -45,7 +45,7 @@
 
 @media only screen and (min-width: 750px) {
     .input_field {
-        max-width: 400px;
+        width: 400px;
         font-size: 15px;
     }
 
@@ -66,7 +66,7 @@
 
 @media only screen and (min-width: 800px) {
     .text_field {
-        max-width: 500px;
+        width: 500px;
         height: 200px;
     }
 }
