--- a/src/AddPromptForm/AddPromptForm.css
+++ b/src/AddPromptForm/AddPromptForm.css
@@ -26,6 +26,9 @@ body {
         font-size: 12px;
         background-color: #ccc;
         color: black;
+        font-family: stratos, sans-serif;
+        font-weight: 500;
+        font-style: normal;
     }
 
     .input_field {
@@ -61,14 +64,44 @@ body {
     .dropdown_options {
         text-align: center;
     }
+
+    .add_prompt_header {
+        font-size: 35px;
+        font-family: stratos, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+        margin-bottom: 40px;
+    }
 }
 
 @media only screen and (min-width: 750px) {
-    .input_field {
-        width: 500px;
+    .add_prompt_section {
+        margin-top: 175px;
     }
 
-    .option_field {
-        width: 300px;
+    .add_prompt_header {
+        font-size: 40px;
+        margin-bottom: 60px;
+    }
+
+    .input_label {
+        font-size: 15px;
+    }
+
+    .submit_prompt_button {
+        height: 30px;
+        width: 200px;
+        font-size: 15px;
+    }
+
+    .submit_prompt_button:hover {
+        background-color: #aaa;
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    .text_field {
+        width: 500px;
+        height: 200px;
     }
 }
