--- a/src/NotFound/NotFound.css
+++ b/src/NotFound/NotFound.css
@@ -13,17 +13,27 @@ body {
 @media only screen and (min-width: 200px) {
     .not_found_h1 {
         padding-top: 100px;
-        font-size: 25px;
+        padding-bottom: 20px;
+        font-family: stratos, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+        font-size: 35px;
     }
 
     .not_found_h2 {
         font-size: 18px;
         padding-top: 20px;
         padding-bottom: 20px;
+        font-family: stratos, sans-serif;
+        font-weight: 600;
+        font-style: normal;
     }
 
     .not_found {
-        font-size: 18px;
+        font-size: 15px;
+        font-family: stratos, sans-serif;
+        font-weight: 300;
+        font-style: normal;
     }
 
     .not_found_page {
@@ -31,5 +41,21 @@ body {
         margin-right: 30px;
         margin-left: 30px;
         margin-bottom: 60px;
+    }
+}
+
+@media only screen and (min-width: 750px) {
+    .not_found_h1 {
+        font-size: 50px;
+        padding-top: 150px;
+    }
+
+    .not_found_h2 {
+        font-size: 25px;
+    }
+
+    .not_found {
+        font-size: 20px;
+        padding-bottom: 30px;
     }
 }
