--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -2,7 +2,7 @@
     footer {
         padding: 1% 0;
         font-size: 12px;
-        background-color: #aaa;
+        background-color: #F2F2F2;
         text-align: center;
         font-family: stratos, sans-serif;
         font-weight: 400;
