--- a/src/PromptList/PromptList.css
+++ b/src/PromptList/PromptList.css
@@ -17,12 +17,13 @@ body {
         font-style: normal;
         font-size: 35px;
         margin-bottom: 40px;
+        color: #1F3473;
     }
 
     .prompt_list_h2 {
-        font-size: 18px;
+        font-size: 20px;
         font-family: big-caslon-fb, serif;
-        font-weight: 700;
+        font-weight: 800;
         font-style: normal;
     }
 
@@ -40,7 +41,7 @@ body {
         margin-right: 0;
         padding-left: 0;
         padding-right: 0;
-        border-top: 1px solid #aaa;
+        border-top: 1px solid #F2F2F2;
         padding-top: 50px;
         margin-right: 30px;
         margin-left: 30px
@@ -59,7 +60,8 @@ body {
         width: 100px;
         border-radius: 1px;
         font-size: 12px;
-        background-color: #ccc;
+        background-color: #23B7D9;
+        color: white;
         font-family: stratos, sans-serif;
         font-weight: 500;
         font-style: normal;
@@ -69,7 +71,7 @@ body {
         font-size: 15px;
         margin-top: 20px;
         margin-bottom: 50px;
-        color: #aaa;
+        color: #F2C777;
     }
 
     .prompt_category, .prompt_author {
@@ -114,6 +116,11 @@ body {
         height: 30px;
         width: 200px;
         font-size: 15px;
+    }
+
+    .prompt_button:hover {
+        height: 33px;
+        width: 203px;
     }
 }
 
