--- a/src/Prompt/Prompt.css
+++ b/src/Prompt/Prompt.css
@@ -5,7 +5,9 @@
 }
 
 body {
-    font-family: "Open Sans", sans-serif;
+    font-family: stratos, sans-serif;
+    font-weight: 400;
+    font-style: normal;
     font-size: 20px;
     color: #444;
     line-height: 1.5;
