--- a/src/MainPage/MainPage.css
+++ b/src/MainPage/MainPage.css
@@ -16,6 +16,7 @@ body {
     .site_title {
         margin-top: 100px;
         margin-bottom: 60px;
+        font-family: stratos, sans-serif;
     }
     
     .random_prompt {
