--- a/src/PromptList/PromptList.css
+++ b/src/PromptList/PromptList.css
@@ -23,6 +23,7 @@ body {
     .prompt_list_h2 {
         font-size: 20px;
         font-family: big-caslon-fb, serif;
+        font-weight: 400px;
         font-style: normal;
     }
 
