--- a/src/AddPromptForm/AddPromptForm.css
+++ b/src/AddPromptForm/AddPromptForm.css
@@ -22,10 +22,12 @@ body {
         height: 25px;
         width: 100px;
         border-radius: 1px;
-        font-size: 15px;
         background-color: #23B7D9;
         color: white;
-        font-weight: 500;
+        font-size: 13px;
+        font-weight: 400;
+        font-style: normal;
+        font-family: 'Oswald', sans-serif;
     }
 
     .submit_prompt_button:disabled {
@@ -80,7 +82,7 @@ body {
     }
 
     .add_prompt_header {
-        font-size: 40px;
+        font-size: 55px;
         margin-bottom: 60px;
     }
 
