--- a/src/MainPage/MainPage.css
+++ b/src/MainPage/MainPage.css
@@ -14,7 +14,7 @@ body {
     .main_page_headline {
         font-family: 'Oswald', sans-serif;
         font-weight: 700;
-        font-size: 35px;
+        font-size: 42px;
         color: #1F3473;
     }
 
@@ -47,9 +47,10 @@ body {
         height: 25px;
         width: 100px;
         border-radius: 1px;
-        font-size: 15px;
-        font-weight: 500;
+        font-size: 13px;
+        font-weight: 400;
         font-style: normal;
+        font-family: 'Oswald', sans-serif;
     }
 
     .view_button {
@@ -69,7 +70,7 @@ body {
     }
 
     .para_two, .para_one {
-        font-size: 16px;
+        font-size: 17px;
         font-weight: 400;
         font-style: normal;
     }
@@ -77,6 +78,7 @@ body {
     .prompt_content_main {
         font-family: big-caslon-fb, serif;
         font-style: normal;
+        font-size: 22px;
     }
 
     .main_page_subhead {
@@ -88,7 +90,7 @@ body {
 
 @media only screen and (min-width: 750px) {
     .main_page_headline {
-        font-size: 50px;
+        font-size: 60px;
         padding-top: 70px;
     }
 
