--- a/src/AddComment/AddComment.css
+++ b/src/AddComment/AddComment.css
@@ -10,7 +10,7 @@ body {
         height: 25px;
         width: 100px;
         border-radius: 1px;
-        background-color: #F2C777;
+        background-color: #23B7D9;
         color: white;
         font-size: 13px;
         font-weight: 400;
